--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "mime": "~1.2.7"
   },
   "devDependencies": {
-    "browser-sync": "^2.11.1",
+    "browser-sync": "^2.17.0",
     "convert-source-map": "^1.2.0",
     "dargs": "^4.1.0",
     "del": "^2.2.0",
@@ -21,6 +21,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7"
   }
