--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "express": "^4.13.4",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-minify": "0.0.14",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.0.7",
+    "sassdoc": "^2.1.20"
   }
 }
