--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "burger",
   "version": "0.9.0",
-  "author": "Mike Fortuna, Halo Media",
+  "author": "Mike Fortuna",
   "description": "simple scss framework built for rapid prototyping",
   "main": "gulpfile.js",
   "dependencies": {
