--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "burger",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "author": "Mike Fortuna",
   "description": "simple scss framework built for rapid prototyping",
   "main": "gulpfile.js",
+  "scripts": {
+    "preinstall": "./configure",
+    "start": "{ gulp watch & browser-sync start --port 3000 --server --files 'css/*.css' & }"
+  },
   "dependencies": {
     "mime": "~1.2.7"
   },
   "devDependencies": {
     "browser-sync": "^2.17.0",
+    "child_process": "^1.0.2",
     "convert-source-map": "^1.2.0",
     "dargs": "^4.1.0",
     "del": "^2.2.0",
     "each-async": "^1.1.1",
     "express": "^4.13.4",
+    "fs": "0.0.1-security",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
